--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>My Website</title> 
+    <link rel="stylesheet" 
+    href="style.css"/> 
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      
-    </div>
+      <nav> 
+        <h1>Brandi Meyers My Website</h1>
+        <ul id="nav-ul"> 
+
+        </ul> 
+        <li class="nav-li">
+          <a 
+          href="portfolio.html">Portfolio</a> 
+        </li> 
+      </ul>
+    </nav>
+
+      <main>
+        <div class="sidebar"> 
+          <img class="sidevar-img"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQk4NVAx4usUyRdOqsymgM7_7Ap93TLJrGA5A&s">
+
+       </div>
+       
+      <div class="content"> 
+        <h2>Halle Bot</h2> 
+        <p>Mascot at Operation Spark</p> 
+        <div id="interests"> 
+          <ul> 
+            <li>Coding</li> 
+            <li>Running</li> 
+            <li>Baking Cupcakes</li> 
+            </ul>
+        </div>
+      </div>
+
+     </main>
   </body>
 </html>
