--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <nav> 
         <h1>Brandi Meyers My Website</h1>
         <ul id="nav-ul"> 
-
-        </ul> 
         <li class="nav-li">
-          <a 
-          href="portfolio.html">Portfolio</a> 
+          <a href="index.html">Home</a>
+        </li>
+        <li class="nav-li">
+          <a href="portfolio.html">Portfolio</a> 
         </li> 
       </ul>
     </nav>
@@ -28,13 +28,13 @@
        </div>
        
       <div class="content"> 
-        <h2>Halle Bot</h2> 
-        <p>Mascot at Operation Spark</p> 
+        <h2>Brandi Meyers</h2> 
+        <p>I'm 18 yearsold and I can be queit on some days but also a very nice person to be around</p> 
         <div id="interests"> 
           <ul> 
-            <li>Coding</li> 
-            <li>Running</li> 
-            <li>Baking Cupcakes</li> 
+            <li>Doing Hair</li> 
+            <li>Drawing</li> 
+            <li>Baking</li> 
             </ul>
         </div>
       </div>
